# service-key-value-store

./: pyproject.toml
app/: MongoAPI.py  app.py
test/: service.txt
